[gd_scene load_steps=2 format=3 uid="uid://bwnp6it4c5s5q"]

[ext_resource type="Script" uid="uid://d4df5foagioef" path="res://Scenes/Main Menu/main_menu.gd" id="1_dtmfd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dtmfd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="NewGameLabel" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadGameLabel" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="QuitLabel" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="GameTitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Shinobi's Saga"
